--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,6 @@
 [build.environment]
   YARN_VERSION = "1.9.4"
   YARN_FLAGS = "--no-ignore-optional"
+
+# Redirect default Netlify subdomain to primary domain
+http://pbahr.netlify.com/* http://pbahr.me/:splat 301!
